--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8682,205 +8682,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ee5b48; }
+  background: #38f7fe; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #0c06a8; }
+  background: #b268b4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0bc8eb; }
+  background: #bb4d2a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #948d26; }
+  background: #f4688d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #4eda55; }
+  background: #3c2c3a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d84efd; }
+  background: #d157f3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #919539; }
+  background: #782628; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f14851; }
+  background: #1f816f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f39444; }
+  background: #c7fe35; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #9bc6d7; }
+  background: #79af5b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #91511d; }
+  background: #0219cf; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b2ab89; }
+  background: #1fd987; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d32ad9; }
+  background: #e04ecb; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0f1695; }
+  background: #57fddc; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #894a30; }
+  background: #2b0803; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #540411; }
+  background: #cc957f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #931b93; }
+  background: #bc15cf; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #11d1fd; }
+  background: #8f7bba; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8bf01c; }
+  background: #dd12b5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2b6064; }
+  background: #c766da; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d2a18f; }
+  background: #36dbc7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #10a193; }
+  background: #05d9c4; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #cfcdd5; }
+  background: #0ab17c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #3e75ab; }
+  background: #86b302; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #51c738; }
+  background: #f8485c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #cbfa63; }
+  background: #81973d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f7baae; }
+  background: #3d0873; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5c09ce; }
+  background: #c9b904; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #07dc56; }
+  background: #51908e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d5ab9e; }
+  background: #aba0cb; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #81280b; }
+  background: #2cb9a7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #999938; }
+  background: #91825b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5fb734; }
+  background: #c13fe8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #238115; }
+  background: #7aa061; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f77720; }
+  background: #3f3444; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #85159c; }
+  background: #2782c4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8e8d03; }
+  background: #963b5f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #616619; }
+  background: #8155a9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8c63b6; }
+  background: #91a535; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f3cb7e; }
+  background: #078574; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #266a3c; }
+  background: #87c688; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e2e46b; }
+  background: #7b3a71; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #82367a; }
+  background: #ad5925; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f765c6; }
+  background: #88e6c9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #15cf96; }
+  background: #135615; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #8d4623; }
+  background: #a15a34; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #0b2e5e; }
+  background: #e7f470; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2afef7; }
+  background: #047448; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #58e662; }
+  background: #a1c394; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #9154e9; }
+  background: #f28573; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2e636e; }
+  background: #e8fab0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #513e58; }
+  background: #08c079; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ca0bd7; }
+  background: #d5e203; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #21ffea; }
+  background: #664286; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #df9c67; }
+  background: #bf3a32; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #038fd6; }
+  background: #de760c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #072c7b; }
+  background: #df9bd2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9c89f3; }
+  background: #2f7d37; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8c705c; }
+  background: #6e958d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #fcb5a4; }
+  background: #43afa1; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #7acd92; }
+  background: #edc54f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #2bead8; }
+  background: #a58cdd; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2077a3; }
+  background: #791ccc; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8ab502; }
+  background: #7d7c2b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fb0324; }
+  background: #aaec98; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #45232f; }
+  background: #61acad; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8fef8e; }
+  background: #e553c4; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #405f59; }
+  background: #b6bb8b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5fbd8f; }
+  background: #b3c7a7; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #dc547d; }
+  background: #714c6c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bcd4a9; }
+  background: #c8ef75; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d4b78e; }
+  background: #1f1b9b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9c0207; }
+  background: #a0d8ce; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #1e53da; }
+  background: #ded6dd; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #84d3d8; }
+  background: #e18a51; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e17f08; }
+  background: #a4d31d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fc818c; }
+  background: #6f85c8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a22542; }
+  background: #0df814; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #c99206; }
+  background: #e345f4; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #03f4bf; }
+  background: #f831b5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a5537f; }
+  background: #723057; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a5712d; }
+  background: #397afb; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a91c99; }
+  background: #d9ad83; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #cd1123; }
+  background: #856d03; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d516bc; }
+  background: #16d401; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #849e02; }
+  background: #a499d1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ff3a3a; }
+  background: #f44cd3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ef8b94; }
+  background: #2f4112; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #79f7f7; }
+  background: #10a080; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #18bbb1; }
+  background: #318ea5; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #94d235; }
+  background: #3459c7; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8058e0; }
+  background: #3a38b5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e136d2; }
+  background: #38c6e7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #640409; }
+  background: #4680b2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f28a71; }
+  background: #61a066; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #55946c; }
+  background: #b31d90; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ddb12f; }
+  background: #b2790e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8703e4; }
+  background: #3080a8; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #696736; }
+  background: #907eea; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #216225; }
+  background: #bbf2cb; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10939,7 +10939,6 @@ input[type="checkbox"] {
   display: block; }
 
 .tab-right-column-container input[type="text"] {
-  padding-left: 40px;
   height: 40px; }
 
 .intro {
@@ -11526,11 +11525,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
