--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #095fa5; }
+  background: #5d4451; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6b8310; }
+  background: #829aba; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6065f0; }
+  background: #62aa94; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7133b4; }
+  background: #0b1942; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e4ce8d; }
+  background: #cefbec; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #5def87; }
+  background: #480f3f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d133bf; }
+  background: #8144cf; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cf0fef; }
+  background: #e72386; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #76d1ea; }
+  background: #563c78; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f009fa; }
+  background: #4e8cce; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c56161; }
+  background: #dbbff2; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d058d3; }
+  background: #6510f8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #3dc4f0; }
+  background: #8c65ca; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0f9356; }
+  background: #9dff45; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #40fd4a; }
+  background: #a8936f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f7508b; }
+  background: #04af9e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a25898; }
+  background: #58b0b1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f04117; }
+  background: #8b9adb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8dbe3e; }
+  background: #897ebf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #6d975c; }
+  background: #6d8273; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #8e896e; }
+  background: #535d83; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #72efae; }
+  background: #5b8197; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5719c2; }
+  background: #4968c0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7fb63d; }
+  background: #7b2e15; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #60674a; }
+  background: #575aea; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #90a9af; }
+  background: #c7ad03; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #38470f; }
+  background: #84ed14; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5b9fbd; }
+  background: #9d919e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #0f986a; }
+  background: #8bc0fe; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #426d2c; }
+  background: #dbdb0f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d0e458; }
+  background: #dcb210; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4d3ca7; }
+  background: #1188f7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #cbd561; }
+  background: #afb8a7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4dd9a7; }
+  background: #7c9682; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a56a69; }
+  background: #a8b82a; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d3c992; }
+  background: #e6b6a4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #026e12; }
+  background: #c81ec7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #55b18e; }
+  background: #225990; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #9f77b6; }
+  background: #1267d1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #eb3c6c; }
+  background: #a103ac; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d01974; }
+  background: #edf21e; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d796bb; }
+  background: #8b7c32; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d25f0e; }
+  background: #1ba733; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #dce685; }
+  background: #3fac58; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b3aacd; }
+  background: #4a1f1a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #935ee1; }
+  background: #e0ef86; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #3642b6; }
+  background: #709afa; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #91a3b0; }
+  background: #708f7f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6e9530; }
+  background: #c49393; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c3bc40; }
+  background: #8b35c0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7bd73f; }
+  background: #97b5dd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #62e04b; }
+  background: #1e0f5b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #d2e512; }
+  background: #320623; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #4c61e0; }
+  background: #ba4398; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4d86fc; }
+  background: #a73a19; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e4cf37; }
+  background: #a46b43; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4bb658; }
+  background: #acef81; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #11f983; }
+  background: #f2963f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b1ec47; }
+  background: #4ba318; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9979ce; }
+  background: #b74722; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0ddfa5; }
+  background: #84b29e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #52cb2c; }
+  background: #82a9a7; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c71645; }
+  background: #9b620a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b08fbe; }
+  background: #c15508; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e4d5d4; }
+  background: #870499; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #275155; }
+  background: #1a7b13; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f927ab; }
+  background: #08baa6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #32ec97; }
+  background: #72429e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #29444c; }
+  background: #fb3a50; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #94f263; }
+  background: #75320d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #17913c; }
+  background: #7a8a03; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #38ea53; }
+  background: #b19c0e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #eaf1fb; }
+  background: #6ae9f3; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #64f10b; }
+  background: #dc49a5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #225a90; }
+  background: #4d176f; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #57a143; }
+  background: #0a42f7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #aac8fd; }
+  background: #c7efa1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d3df2c; }
+  background: #bc56e8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #38f6a5; }
+  background: #257b9b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #47fd10; }
+  background: #dcb866; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cd15c8; }
+  background: #f15014; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c5fc15; }
+  background: #66adcd; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1ef749; }
+  background: #1744f5; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #bb91cb; }
+  background: #a22df5; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #be729a; }
+  background: #3f8a78; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e1d47c; }
+  background: #6d7391; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #edd524; }
+  background: #3b248b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5cdd87; }
+  background: #1598ae; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3107db; }
+  background: #f4f387; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #53673c; }
+  background: #65fad8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0d914b; }
+  background: #f5c150; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bb1aca; }
+  background: #60d63c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bfdc05; }
+  background: #b38e15; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7a7a9c; }
+  background: #a6658c; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3ac860; }
+  background: #062207; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e348ed; }
+  background: #e6595a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a33bad; }
+  background: #2dd27f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #50ad7c; }
+  background: #631101; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #02541a; }
+  background: #ccaf1a; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a9a343; }
+  background: #59abdd; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10919,9 +10919,6 @@ input[type="checkbox"] {
 
 .block {
   display: block; }
-
-.tab-right-column-container input[type="text"] {
-  padding-left: 40px; }
 
 .intro {
   display: flex;
